1999-12-15  Eli Zaretskii  <eliz@is.elta.co.il>

	* faces.el (face-read-integer, read-face-attribute)
	(color-defined-p, color-values): Allow color values unspecified-fg
	and unspecified-bg, handle them as unspecified.

1999-12-15  Kenichi Handa  <handa@etl.go.jp>

	The following changes are for the new composition mechanism.  We
	have deleted `composition' charset and composite characters,
	instead introduced a special text property `composition'.

	* composite.el: New file.

	* ps-mule.el: Define encode-composition-rule and find-composition
	for Emacs 20.4 and the earlier versions.
	(ps-mule-init-external-library): Just require a feature for
	external libraries.
	(ps-mule-prologue): Postscript code modified for new composition.
	(ps-mule-find-wrappoint): New arg COMPOSITION.
	(ps-mule-plot-string): Delete code for composite characaters.
	(ps-mule-plot-composition): New funcion.
	(ps-mule-prepare-font-for-components): New function.
	(ps-mule-plot-components): New function.
	(ps-mule-composition-prologue-generated): Renamed from
	ps-mule-cmpchar-prologue-generated.
	(ps-mule-composition-prologue): New named from
	ps-mule-cmpchar-prologue.  Modified for new composition.
	(ps-mule-plot-rule-cmpchar, ps-mule-plot-cmpchar,
	ps-mule-prepare-cmpchar-font): Deleted.
	(ps-mule-string-encoding): New arg NO-SETFONT.
	(ps-mule-bitmap-prologue): In Postscript code of BuildGlyphCommon,
	check Composing, not Cmpchar
	(ps-mule-initialize): Set ps-mule-composition-prologue-generated
	to nil.
	(ps-mule-begin-job): Check existence of new composition.

	* ps-print.el (ps-plot-region): Handle new composition.

	* simple.el (what-cursor-position): Show "(composed)" if the
	character is composed.

	* international/characters.el: Fix cateogries of Lao symbols.

	* international/fontset.el (vertical-centering-font-regexp): New
	variable.

	* international/mule.el (mule-version): Updated to 5.0 (AOI).
	(mule-version-date): Updated to 1999.12.7.
	(with-category-table): New macro.
